--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <!-- Créditos -->
         <div class="text-center text-xs text-gray-400 mt-8 border-t pt-4">
-            <p>Vide code por Glauber Santiago (UFSCar) 2025</p>
+            <p>Vibe code: Glauber Santiago (UFSCar) 2025</p>
             <a href="https://sites.google.com/view/glauberia" target="_blank" rel="noopener noreferrer" class="text-rosa-muted hover:underline">GlauberIA</a>
         </div>
     </div>
